--- a/backend/src/main/webapp/app/i18n/locale-th.json
+++ b/backend/src/main/webapp/app/i18n/locale-th.json
@@ -27,6 +27,8 @@
     "user.table.header.role": "สิทธิ์",
     "user.table.header.status": "สถานะ",
     "user.table.header.created_date": "วันที่สร้าง",
+    "user.search.username_hint": "ชื่อผู้ใช้",
+    "user.search.clear_btn": "ล้าง",
     "user.addpage.auto_gen": "สร้างอัตโนมัติ",
     "user.addpage.username": "ชื่อผู้ใช้",
     "user.addpage.password": "รหัสผ่าน",
