--- a/backend/src/main/webapp/app/i18n/locale-en.json
+++ b/backend/src/main/webapp/app/i18n/locale-en.json
@@ -44,6 +44,7 @@
     "chart.unit.vehicle": "Vehicle",
     "chart.unit.money": "Money",
     
+    "menu.capture": "Capture Vehicle",
     "menu.vehicle": "Vehicle",
     "menu.chart": "Charts Report",
     "menu.user": "User",
