--- a/backend/src/main/webapp/app/i18n/locale-en.json
+++ b/backend/src/main/webapp/app/i18n/locale-en.json
@@ -12,7 +12,7 @@
     "pagination.next": "Next",
     "pagination.last": "Last",
     
-    "menu.vehicle": "Vehicle",
+    "menu.order": "Order",
     "menu.chart": "Charts Report",
     "menu.user": "User",
     "menu.setting": "Setting",
