--- a/backend/src/main/webapp/app/i18n/locale-th.json
+++ b/backend/src/main/webapp/app/i18n/locale-th.json
@@ -12,7 +12,7 @@
     "pagination.next": "ถัดไป",
     "pagination.last": "หน้าสุดท้าย",
     
-    "menu.vehicle": "ข้อมูลรถ",
+    "menu.order": "สั่งซื้อ",
     "menu.chart": "รายงาน",
     "menu.user": "ผู้ใช้",
     "menu.setting": "ตั้งค่า",
