--- a/backend/src/main/webapp/app/i18n/locale-en.json
+++ b/backend/src/main/webapp/app/i18n/locale-en.json
@@ -71,6 +71,7 @@
     "user.header.panel.user_list": "User List",
     "user.header.panel.add_user": "Add User",
     "user.header.panel.edit_user": "Edit User",
+    "user.table.header.username_show": "Username Show",
     "user.table.header.username": "Username",
     "user.table.header.role": "Role",
     "user.table.header.status": "Status",
@@ -78,6 +79,7 @@
     "user.search.username_hint": "UserName",
     "user.search.clear_btn": "Clear",
     "user.addpage.auto_gen": "Auto Generated",
+    "user.addpage.username_show": "Username Show",
     "user.addpage.username": "Username",
     "user.addpage.password": "Password",
     "user.addpage.re_type_password": "Re-type Password",
@@ -93,6 +95,7 @@
     
     "profile.header_title": "My Profile",
     "profile.header_panel": "Profile Information",
+    "profile.username_show": "Username Show",
     "profile.username": "Username",
     "profile.new_password": "New Password",
     "profile.re_type_new_password": "Re-type New Password",
@@ -101,6 +104,9 @@
     
     "datepicker.today": "Today",
     "datepicker.clear": "Clear",
-    "datepicker.close": "Close"
+    "datepicker.close": "Close",
+    
+    "message.err.username_show_same": "Username-Show already exists",
+    "message.err.username_same": "Username already exists"
     
 }
