Change label to restaurant

--- a/backend/src/main/webapp/app/i18n/locale-en.json
+++ b/backend/src/main/webapp/app/i18n/locale-en.json
@@ -1,5 +1,5 @@
 {
-	"login.title": "Sign Ricoh SMS.",
+	"login.title": "Restaurant System",
     "login.login_btn": "Login",
     
     "pagination.page": "page",
