--- a/backend/src/main/webapp/app/i18n/locale-th.json
+++ b/backend/src/main/webapp/app/i18n/locale-th.json
@@ -110,6 +110,15 @@
     "table_manage.cancel_btn": "ยกเลิก",
     "table_manage.add_table_btn": "เพิ่มโต๊ะอาหาร",
     
+    "table_land.header_title": "โต๊ะอาหาร",
+    "table_land.header_panel": "แสดงสถานะโต๊ะอาหาร",
+    "table_land.search.form.table_name_hint": "ชื่อโต๊ะ",
+    "table_land.search.form.status": "สถานะ",
+    "table_land.search.form.status_unused": "โต๊ะว่าง",
+    "table_land.search.form.status_used": "โต๊ะไม่ว่าง",
+    "table_land.search.form.clear_btn": "ล้าง",
+    "table_land.directive.table": "โต๊ะ",
+    
     "message.err.username_show_same": "ชื่อนี้ซ้ำกรุณาลองอีกครั้ง",
     "message.err.username_same": "ชื่อนี้ซ้ำกรุณาลองอีกครั้ง",
     "message.err.empty": "กรุณากรอกข้อมูล",
