--- a/backend/src/main/webapp/app/i18n/locale-th.json
+++ b/backend/src/main/webapp/app/i18n/locale-th.json
@@ -22,7 +22,8 @@
     "menu.menu_type": "ประเภทเมนู",
     "menu.table_land": "โต๊ะอาหาร",
     "menu.table_manage": "จัดการโต๊ะอาหาร",
-    "menu.sale": "ขาย",
+    "menu.sale": "เก็บเงิน",
+    "menu.kitchen": "ครัว",
     
     "user.header_title": "ผู้ใช้",
     "user.header.panel.user_list": "แสดงผู้ใช้งาน",
@@ -126,8 +127,8 @@
     "table_land_detail.th_status": "สถานะ",
     "table_land_detail.th_type": "ประเภท",
     
-    "sale.header_title": "ขาย",
-    "sale.header_panel": "แสดงลูกค้า",
+    "sale.header_title": "เก็บเงิน",
+    "sale.header_panel": "แสดงลูกค้าทั้งหมด",
     "sale.header_panel.detail": "แสดงรายการอาหาร",
     "sale.search.form.cus_ref_hint": "รหัสอ้างอิง หรือ ชื่อโต๊ะ",
     "sale.search.form.status": "สถานะ",
@@ -143,6 +144,22 @@
     "sale_detail.th_type": "ประเภท",
     "sale_detail.th_amount": "จำนวน",
     "sale_detail.th_price_sum": "ราคารวม",
+    
+    "kichen.header_title": "ครัว",
+    "kichen.item": "รายการ",
+    "kichen.header_panel": "แสดงตารางการทำอาหาร",
+    "kichen.panel.header_queue": "รายการอาหารใน queue",
+    "kichen.panel.header_queue_same": "รายการอาหารที่เหมือนกัน",
+    "kichen.panel.header_doing": "รายการอาหารที่กำลังทำ",    
+    "kichen.panel.header_finished": "รายการอาหารที่เสร็จแล้ว",    
+    "kichen.change_status_to": "เปลี่ยนสถานะเป็น",    
+    "kichen.table": "โต๊ะ",
+    "kichen.ref": "ref.",
+    "kichen.amount": "จำนวน",
+    "kichen.title_queue": "กลับไปรอ queue",
+    "kichen.title_doing": "กำลังทำ",
+    "kichen.title_finished": "ทำเสร็จแล้ว",
+    
     
     "message.err.username_show_same": "ชื่อนี้ซ้ำกรุณาลองอีกครั้ง",
     "message.err.username_same": "ชื่อนี้ซ้ำกรุณาลองอีกครั้ง",
