--- a/backend/src/main/webapp/app/i18n/locale-th.json
+++ b/backend/src/main/webapp/app/i18n/locale-th.json
@@ -99,9 +99,8 @@
     "menu.sub.add_btn": "เพิ่มเมนูย่อย",
     "menu.sub.table_header.name": "ชื่อเมนูย่อย",
     "menu.sub.table_header.price": "ราคา",
-    "menu.sub.can_amount": "ระบุจำนวน",
-    "menu.sub.cann_amount": "ไม่ระบุจำนวน",
-    
+    "menu.sub.can_amount": "มีจำนวน",
+    "menu.sub.cann_amount": "ไม่มีจำนวน",
     
     "menu_type.header_title": "จัดการประเภทเมนู",
     "menu_type.header_panel": "แสดงประเภทเมนู",
