--- a/backend/src/main/webapp/app/i18n/locale-th.json
+++ b/backend/src/main/webapp/app/i18n/locale-th.json
@@ -1,5 +1,5 @@
 {
-	"login.title": "เข้าสู่ระบบ Master",
+	"login.title": "เข้าสู่ระบบ SPT Trader",
     "login.login_btn": "เข้าสู่ระบบ",
     
     "pagination.page": "หน้า",
