--- a/backend/src/main/webapp/app/i18n/locale-th.json
+++ b/backend/src/main/webapp/app/i18n/locale-th.json
@@ -7,10 +7,10 @@
     "pagination.total": "ทั้งหมด",
     "pagination.items": "รายการ",
     "pagination.per_page": "ต่อหน้า",
-    "pagination.first": "หน้าแรก",
-    "pagination.previous": "ก่อนหน้า",
-    "pagination.next": "ถัดไป",
-    "pagination.last": "หน้าสุดท้าย",
+    "pagination.first": "<",
+    "pagination.previous": "<<",
+    "pagination.next": ">>",
+    "pagination.last": ">",
     
     "menu.vehicle": "ข้อมูลรถ",
     "menu.chart": "รายงาน",
